# solana-aa

./: Anchor.toml  CLAUDE.md  README.md  ROADMAP.md  package.json  tsconfig.json
borsh/: index.ts
borsh/schemas/: account-manager.ts  account.ts  index.ts
borsh/schemas/identity/: index.ts  oidc.ts  wallet.ts  webauthn.ts
borsh/schemas/transaction/: transaction.ts
docs/superpowers/plans/: 2026-06-12-zk-oidc-auth.md  2026-06-14-execute-auth-and-sign.md
docs/superpowers/specs/: 2026-06-14-execute-auth-and-sign-design.md
programs/mock-chain-signatures/: Cargo.toml
programs/mock-chain-signatures/src/: lib.rs
programs/solana-aa/: Cargo.toml
programs/solana-aa/src/: lib.rs  pda_seeds.rs
programs/solana-aa/src/contract/: accounts.rs  close.rs  contract_lifecycle.rs  ethereum_auth.rs  init.rs  mod.rs  oidc_registry.rs  transaction_buffer.rs
programs/solana-aa/src/contract/auth/: ek256.rs  mod.rs  rsa.rs  secp256k1_keccak256.rs  secp256p1_sha256.rs  secp256r1_sha256.rs  webauthn.rs  zk_oidc.rs
programs/solana-aa/src/contract/auth/rsa/: constants.rs  mod.rs  rsa_multi_tx.rs  rsa_native.rs  rsa_rsa_crate.rs  utils.rs
programs/solana-aa/src/contract/transaction/: execute.rs  mod.rs  sign.rs  types.rs  validation.rs
programs/solana-aa/src/traits/: mod.rs  signable_message.rs
programs/solana-aa/src/types/: account.rs  account_manager.rs  mod.rs  oidc_key_registry.rs
programs/solana-aa/src/types/identities/: mod.rs  wallet.rs  webauthn.rs
programs/solana-aa/src/types/identity/: mod.rs  oidc.rs  webauthn.rs
programs/solana-aa/src/types/transaction/: transaction.rs
programs/solana-aa/src/utils/: pda.rs
tests/: accounts.spec.ts  accounts.ts  borsh-ek256-auth.spec.ts  borsh-ek256-auth.ts  borsh-secp256k1-keccak256-auth.ts  ethereum-auth.ts  execute_ek256.spec.ts  execute_ek256.ts  execute_webauthn.spec.ts  rsa-multi-tx-simple.ts  rsa-oidc-verification.ts  secp256k1-keccak256-auth.ts  secp256p1-sha256-auth.ts  secp256r1-sha256-auth.spec.ts  sign.spec.ts  solana-aa.ts  transaction-buffer.spec.ts  transaction-buffer.ts  webauthn-auth.ts  zk-oidc.spec.ts
tests/fixtures/: zk-oidc-add-identity.json
tests/rsa/: README.md  constants.ts  rsa-crate-oidc-verification.spec.ts  rsa-oidc-verification-multi-tx.ts  rsa-oidc-verification.ts  rsa-syscall-oidc-verification.spec.ts  rsa-syscall-oidc-verification.ts  utils.ts
utils/: account.ts  constants.ts  ethereum.ts  program.ts  secp256k1-signer.ts  solana.ts  test-helpers.ts  utils.ts  webauthn.ts  zk-oidc.ts
utils/borsh/: index.ts
utils/borsh/schemas/: transaction.ts
utils/borsh/schemas/identity/: index.ts  wallet.ts
utils/identity/: ethereum.ts  index.ts  oidc.ts  webauthn.ts
zk/: BENCHMARK.md
zk/jwt-program/: Cargo.toml
zk/jwt-program/src/: main.rs
zk/script/: Cargo.toml  build.rs
zk/script/fixtures/: test_rsa_private.pem
zk/script/src/: main.rs
