[package]
name = "solana-aa"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_aa"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
hex = "0.4.3"
sha3 = "0.10.8"
schemars = "0.8.22"
sha2 = "0.10.8"
bytemuck = { version = "1.22.0", features = ["derive"] }
base64 = "0.22.1"
rsa = { version = "0.9.8", default-features = false, features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana", rev = "768d62d9a8831f2b5600574fd5d96948eb7ebfc0" }
sp1-primitives = "=5.0.0"
p3-baby-bear = "0.2.3-succinct"
p3-field = "0.2.3-succinct"


[dev-dependencies]
base64 = "0.22.1"




