[workspace]

[package]
name = "jwt-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "=5.0.0"
sp1-primitives = "=5.0.0"
rsa = "0.9.6"
sha2 = { version = "0.10.8", features = ["oid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
p3-baby-bear = "0.2.3-succinct"
p3-field = "0.2.3-succinct"
