[workspace]

[package]
name = "zk-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zk-script"
path = "src/main.rs"

[build-dependencies]
sp1-build = "=5.0.0"

[dependencies]
sp1-sdk = "=5.0.3"
solana-aa = { path = "../../programs/solana-aa", features = ["no-entrypoint"] }
anchor-lang = "0.31.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = { version = "0.9.8", features = ["sha2", "pem"] }
sha2 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
anyhow = "1.0"
p3-baby-bear = "0.2.3-succinct"
p3-field = "0.2.3-succinct"
